update api screening, edit director